Nodes as buttons
In-progress. Need to change node.value to String type

--- a/MathDotNet.csproj
+++ b/MathDotNet.csproj
@@ -291,6 +291,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ButtonScript.cs" />
     <Compile Include="Assets\Scripts\Manager.cs" />
     <Compile Include="Assets\Scripts\MathInput.cs" />
     <Compile Include="Assets\Scripts\MathWindow.cs" />
