--- a/MathDotNet.csproj
+++ b/MathDotNet.csproj
@@ -297,6 +297,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AttributeShardScript.cs" />
     <Compile Include="Assets\Scripts\animController.cs" />
     <Compile Include="Assets\Scripts\ArmScript.cs" />
     <Compile Include="Assets\Scripts\BorderScript.cs" />
